# STM32WBx5-template

./: .gitmodules  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
cmake/: format.cmake
hal/: STM32WBxx_FLASH.ld
include/: ILED.hh  ITiming.hh  LED.hh  Module.hh  Timing.hh
src/: LED.cc  Module.cc  Timing.cc  main.cc  syscalls.c
test/: CMakeLists.txt
test/mocks/: mock_led.hh  mock_timing.hh  mock_uart.hh
test/src/: test_module.cc
